--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -1,5 +1,11 @@
 {
-  "appId": "MovieBookingTicket.app",
-  "appName": "MovieBookingTicket",
-  "webDir": "dist"
+  "appId": "com.movieticket.booking",
+  "appName": "MovieTicketBooking",
+  "webDir": "dist",
+  "bundledWebRuntime": false,
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 2000
+    }
+  }
 }
