--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 PORT=4000 # Port mà backend sẽ chạy
-MONGO_URL=mongodb://mongo:27017/ # Đường dẫn kết nối MongoDB, cần cài Docker Desktop trước
+MONGO_URL=mongodb://mongo:27017/movie-ticket-booking # Đường dẫn kết nối MongoDB, cần cài Docker Desktop trước
 JWT_SECRET= # Điền chuỗi bất kỳ, dùng để ký JWT
+CLIENT_URL= # URL của client, thường là http://localhost:3000 (Địa chỉ frontend) nếu chạy trên máy cục bộ
 
 
 # Khi chạy thực tế:
