--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,14 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "form-data": "^4.0.3",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.0.3",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "socket.io": "^4.8.1",
