fix(backend): Change Mailgun to nodemailer, fix route (verify-email to verify)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,12 @@
 PORT=4000 # Port mà backend sẽ chạy
-MONGO_URL=mongodb://mongo:27017/movie-ticket-booking # Đường dẫn kết nối MongoDB, cần cài Docker Desktop trước
+MONGO_URL=mongodb://mongo:27017/movie-ticket-booking # URL kết nối đến MongoDB
 JWT_SECRET= # Điền chuỗi bất kỳ, dùng để ký JWT
-CLIENT_URL= # URL của client, thường là http://localhost:3000 (Địa chỉ frontend) nếu chạy trên máy cục bộ
-
+CLIENT_URL= # Để sau này frontend có thể gọi API từ backend
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+# Dùng mailtrap sandbox: https://mailtrap.io/inboxes/
 
 # Khi chạy thực tế:
 # Tạo file .env (copy y nguyên các biến từ .env.example).
