--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "mailgun.js": "^12.0.3",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
