--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
+    "qrcode.react": "^4.2.0",
     "query-string": "^9.2.2",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
